load("@ofiuco//lib:defs.bzl", "lib")
load("@ofiuco//python:poetry.bzl", "poetry_lock")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")

# load("@rules_cc//cc:defs.bzl", "cc_toolchain")
# load(":cc_toolchain_config.bzl", "cc_toolchain_config")
load(":transitions.bzl", "py_binary_linux_x86_64")

platform(
    name = "darwin_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

py_binary(
    name = "app",
    srcs = ["app.py"],
    deps = [
        "@poetry//:numpy",
    ],
)

lib.py_zip(
    name = "default.zip",
    target = ":app",
)

lib.py_zip(
    name = "deploy_darwin_arm64.zip",
    platform = ":darwin_arm64",
    target = ":app",
)

lib.py_zip(
    name = "deploy_linux_arm64.zip",
    platform = ":linux_arm64",
    target = ":app",
)

filegroup(
    name = "deploy_linux_arm64",
    srcs = [":deploy_linux_arm64.zip"],
    output_group = "all",
)

lib.py_zip(
    name = "deploy_windows_x86_64.zip",
    platform = ":windows_x86_64",
    tags = ["manual"],
    target = ":app",
)

py_binary_linux_x86_64(
    name = "app_linux_x86_64",
    binary = ":app",
)

lib.py_zip(
    name = "deploy_linux_x86_64.zip",
    target = ":app_linux_x86_64",
)

filegroup(
    name = "deploy_linux_x86_64",
    srcs = [":deploy_linux_x86_64.zip"],
    output_group = "all",
)

py_test(
    name = "test",
    size = "large",
    srcs = ["test.py"],
    data = [
        ":default.zip",
        ":deploy_darwin_arm64.zip",
        ":deploy_linux_arm64",
        ":deploy_linux_x86_64",
    ] + select({
        "@platforms//os:windows": [":deploy_windows_x86_64.zip"],
        "//conditions:default": [],
    }),
    deps = [
        "@poetry//:pyelftools",
        "@poetry//:pytest",
    ],
)

poetry_lock(
    name = "lock",
    lock = "poetry.lock",
    toml = "pyproject.toml",
)
