bazel_dep(name = "rules_python", version = "0.33.2")
bazel_dep(name = "platforms", version = "0.0.10")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12")

bazel_dep(name = "rules_ophiuchus", version = "0.0.0")
local_path_override(
    module_name = "rules_ophiuchus",
    path = "../..",
)

poetry = use_extension("@rules_ophiuchus//python:extensions.bzl", "poetry")
poetry.parse(
    name = "poetry",
    lock = "//:poetry.lock",
)
use_repo(poetry, "poetry")

register_toolchains("//:empty_cc_toolchain")
