load("@ofiuco//python:uv.bzl", "uv_lock")
load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test",
    size = "large",
    srcs = ["test.py"],
    data = ["uv.lock"],
    deps = [
        "@uv//:all",
    ],
)

uv_lock(
    name = "lock",
    lock = "uv.lock",
    toml = "pyproject.toml",
)
