load("@ofiuco//python:uv.bzl", "uv_lock")
load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test",
    size = "large",
    srcs = ["test.py"],
    data = ["uv.lock"],
    env = {
        "POLARS_SKIP_CPU_CHECK": "1",
    },
    deps = [
        "@uv//:all",
    ] + select({
        "@platforms//os:windows": [],  # skip google-re2 building on windows
        "//conditions:default": ["@uv_re2//:google-re2"],
    }),
)

uv_lock(
    name = "lock",
    lock = "uv.lock",
    toml = "pyproject.toml",
)

uv_lock(
    name = "lock_re2",
    lock = "re2/uv.lock",
    toml = "re2/pyproject.toml",
)
