load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load(":globstar_test.bzl", "globstar_test_suite")
load(":prefix_lookup_test.bzl", "prefix_lookup_test_suite")
load(":py_zip_test.bzl", "py_zip_test_suite")
load(":runfiles_test.bzl", "runfiles_test_suite")

globstar_test_suite()

prefix_lookup_test_suite()

py_zip_test_suite()

runfiles_test_suite()

filegroup(
    name = "test_filegroup",
    srcs = [
        "@ofiuco_pip//:pkg",
    ],
    data = [
        "globstar_test.bzl",
        "runfiles_test.bzl",
    ],
)

platform(
    name = "lambda",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

py_binary(
    name = "py_zip_test_binary",
    srcs = ["py_zip_test_binary.py"],
)

py_binary(
    name = "zipper",
    srcs = ["zipper.py"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "zipper_test",
    srcs = ["zipper_test.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":zipper",
    ],
)
