load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load(":markers_test.bzl", "markers_test_suite")
load(":poetry_deps_test.bzl", "poetry_deps_test_suite")

markers_test_suite()

poetry_deps_test_suite()

py_binary(
    name = "poetry_deps",
    srcs = ["poetry_deps.py"],
    visibility = ["//python:__subpackages__"],
    deps = [
        ":utils",
        "@ofiuco_pip//:pkg",
    ],
)

py_test(
    name = "poetry_deps_test",
    srcs = [
        "poetry_deps_test.py",
    ],
    data = [
        "assets/six-1.16.0-py2.py3-none-any.whl",
    ],
    deps = [
        ":poetry_deps",
    ],
)

py_binary(
    name = "py_venv",
    srcs = ["py_venv.py"],
    visibility = ["//python:__subpackages__"],
    deps = [
        ":utils",
    ],
)

py_test(
    name = "py_venv_test",
    srcs = [
        "py_venv_test.py",
    ],
    data = [
        "assets/six-1.16.0-py2.py3-none-any.whl",
    ],
    deps = [
        ":py_venv",
    ],
)

py_library(
    name = "utils",
    srcs = ["utils.py"],
    visibility = ["//python:__subpackages__"],
)

py_binary(
    name = "lock_parser",
    srcs = [
        "lock_parser.py",
    ],
)

py_test(
    name = "lock_parser_test",
    srcs = [
        "lock_parser_test.py",
    ],
    data = [
        # Update lock files: for d in sphinx torch ; poetry lock -C python/private/assets/$d ; end
        "assets/airflow/poetry.lock",
        "assets/sphinx/poetry.lock",
        "assets/torch/poetry.lock",
    ],
    deps = [
        ":lock_parser",
    ],
)
