load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load(":markers_test.bzl", "markers_test_suite")
load(":package_deps_test.bzl", "package_deps_test_suite")

markers_test_suite()

package_deps_test_suite()

py_binary(
    name = "package_deps",
    srcs = ["package_deps.py"],
    visibility = ["//python:__subpackages__"],
    deps = [
        ":utils",
        "@ofiuco_pip//:pkg",
    ],
)

py_test(
    name = "package_deps_test",
    srcs = [
        "package_deps_test.py",
    ],
    data = [
        "assets/six-1.16.0-py2.py3-none-any.whl",
    ],
    deps = [
        ":package_deps",
    ],
)

py_binary(
    name = "py_venv",
    srcs = ["py_venv.py"],
    visibility = ["//python:__subpackages__"],
    deps = [
        ":utils",
    ],
)

py_test(
    name = "py_venv_test",
    srcs = [
        "py_venv_test.py",
    ],
    data = [
        "assets/six-1.16.0-py2.py3-none-any.whl",
    ],
    deps = [
        ":py_venv",
    ],
)

py_library(
    name = "utils",
    srcs = ["utils.py"],
    visibility = ["//python:__subpackages__"],
)

py_binary(
    name = "lock_parser",
    srcs = [
        "lock_parser.py",
    ],
)

py_test(
    name = "lock_parser_test",
    srcs = [
        "lock_parser_test.py",
    ],
    data = [
        # Update Poetry lock files: for d in airflow sphinx torch ; poetry lock -C python/private/assets/$d ; end
        # Update uv lock files: for d in airflow sphinx ; cd python/private/assets ; uv lock ; cd - ;  end
        "assets/airflow/poetry.lock",
        "assets/sphinx/poetry.lock",
        "assets/sphinx/uv.lock",
        "assets/torch/poetry.lock",
        "assets/pytest.json",
        "assets/pytest.html",
    ],
    deps = [
        ":lock_parser",
    ],
)
